Add component rustfmt and clippy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,9 +62,11 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update -y -qq
-
+      
       - name: Run cargo clippy
-        run: cargo clippy --workspace --all-targets --verbose -- -A dead-code
+        run: |
+          rustup component add clippy
+          cargo clippy --workspace --all-targets --verbose -- -A dead-code
 
   rustfmt:
     name: Verify code formatting
@@ -83,4 +85,6 @@ jobs:
           sudo apt-get update -y -qq
 
       - name: Run cargo clippy
-        run: cargo fmt --all -- --check
+        run: |
+          rustup component add rustfmt
+          cargo fmt --all -- --check      
